fix registration (csrf token) and css

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,6 +92,10 @@ search
 	border-radius: 50px;
 }
 
+.sign-in {
+	margin: 0 10px;
+}
+
 /*==========================
 nav-bar
 ==========================*/
