--- a/public/css/lib/input.css
+++ b/public/css/lib/input.css
@@ -11,7 +11,7 @@
 	font-weight: 600;
 }
 
-input, select {
+input, select, textarea {
 	appearance:none;
 	flex: 1;
 	display: block;
@@ -26,6 +26,10 @@ input, select {
 	font-size: 15px;
 	font-family: 'Montserrat', sans-serif;
 	color: #333333;
+}
+
+textarea {
+	line-height: 15px;
 }
 
 input::placeholder {
